# my-database

./: .gitignore  README.md  db.cpp  run-script.sh  test  test.cpp  todo-list.txt
databases/: prashant123
include/: codes.h  db.h
shell-script/: data-entry.sh
src/: CMakeLists.txt  cmd.cpp  codes.cpp  db.cpp
test/: CMakeLists.txt  tests.cpp
